[gd_scene load_steps=3 format=3 uid="uid://dl576mwb5w36s"]

[ext_resource type="Script" uid="uid://di1j44krjxpll" path="res://experiments/multiplayer/scenes/main_menu.gd" id="1_2val1"]
[ext_resource type="PackedScene" uid="uid://etlvojivpyfa" path="res://experiments/multiplayer/scenes/lobby.tscn" id="2_vpb27"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2val1")
lobby_scene = ExtResource("2_vpb27")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -33.0
offset_right = 55.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
vertical = true

[node name="hostBtn" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Host"

[node name="joinGroup" type="HBoxContainer" parent="BoxContainer"]
layout_mode = 2

[node name="joinBtn" type="Button" parent="BoxContainer/joinGroup"]
custom_minimum_size = Vector2(69.465, 0)
layout_mode = 2
text = "Join"

[node name="ipInput" type="LineEdit" parent="BoxContainer/joinGroup"]
custom_minimum_size = Vector2(135, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "127.0.0.1"
max_length = 15

[connection signal="pressed" from="BoxContainer/hostBtn" to="." method="_on_host_btn_pressed"]
[connection signal="pressed" from="BoxContainer/joinGroup/joinBtn" to="." method="_on_join_btn_pressed"]
[connection signal="text_changed" from="BoxContainer/joinGroup/ipInput" to="." method="_on_ip_input_text_changed"]
